--- a/Home/index.html
+++ b/Home/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,62 @@
     <title>Home</title>
     <link rel="stylesheet" href="./assets/stylesheet/app.css">
 </head>
+
 <body>
+
+    <section>
+        <div class="content-details">
+            <h1>
+                Value is beautiful
+            </h1>
+            <p>
+                We are a mid sized development agency focusing on data driven viable value in the digital space creating
+                engaging content and web applications to power the digital movement of a company.
     
+                Our passion is to spend more time on fewer projects and focus on the intellectual, functional, and
+                artistic aspects of a business. Looking to create profound ideas, timeless design, with one goal in mind
+                to make the internet a better place!
+            </p>
+        </div>    
+        <div class="colgroup">
+            <div class="column1">
+                <div class="image">
+                    <img src="./assets/images/luca-bravo-XJXWbfSo2f0-unsplash (1).png" alt="laptop image">
+                </div>
+                <div class="image-text">
+                    Digital News .18
+                </div>
+                <h2>
+                    Digital News .18
+                </h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque libero, voluptatum nulla saepe
+                    dolorum omnis. Eligendi facilis labore, minima fugit, itaque quia sed aspernatur ex laboriosam eius
+                    tempore quas maiores.
+                </p>
+            </div>
+            <div class="column2">
+                <div class="image-content">
+                    <div class="image">
+                        <img src="./assets/images/luca-bravo-XJXWbfSo2f0-unsplash (1).png" alt="laptop image">
+                    </div>
+                    <div class="image-text">
+                        Monthly Summary .27
+                    </div>
+                </div>
+
+                <h2>
+                    Monthly Summary .27
+                </h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque libero, voluptatum nulla saepe
+                    dolorum omnis. Eligendi facilis labore, minima fugit, itaque quia sed aspernatur ex laboriosam eius
+                    tempore quas maiores.
+                </p>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
