--- a/Home/index.html
+++ b/Home/index.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="./assets/stylesheet/app.css">
 </head>
 <body>
+
+    <!-- First-Section By Amisha Rijal..... -->
+
+    <main>
+        <section class="first-section">
+
+            <div class="nav-bar">
+
+                <div class="left">
+                <img src="./image/top-logo.png" alt="">
+                <h4>E-Commerce LAB</h4>
+            </div>
+
+
+            <div class="right">     
+                <p>Contact us</p>
+                <img src="./image/top-button.jpg"  alt="">
+                <div class="menu-icon">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>      
+            </div>
+
+            </div>
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+    </main>
     
     
 </body>
