--- a/Home/index.html
+++ b/Home/index.html
@@ -12,6 +12,7 @@
     <!-- First-Section By Amisha Rijal..... -->
 
     <main>
+
         <section class="first-section">
 
             <div class="nav-bar">
@@ -32,6 +33,11 @@
                 </div>      
             </div>
 
+            </div>
+
+
+            <div class="wrap">
+                <img src="./image/back-img.jpg" width="100%" alt="">
             </div>
 
 
