--- a/Home/index.html
+++ b/Home/index.html
@@ -36,8 +36,9 @@
             </div>
 
 
-            <div class="wrap">
-                <img src="./image/back-img.jpg" width="100%" alt="">
+            <div class="image">
+                <img src="./image/back-img.jpg" width="100%" class="back-img" alt="">
+                <h2 class="text">Next Generation <br> Digital E-Commerce</h2>
             </div>
 
 
