--- a/Home/index.html
+++ b/Home/index.html
@@ -10,59 +10,75 @@
 </head>
 
 <body>
+    <main class="container">
+        <section>
+            <div class="heading">
+                <h1>
+                    Value is beautiful
+                </h1>
+                <p>We are a mid sized development agency focusing on data driven viable value in the digital space
+                    creating
+                    engaging content and web applications to power the digital movement of a company.<br>
+                    <br>
+                    Our passion is to spend more time on fewer projects and focus on the intellectual, functional, and
+                    artistic aspects of a business. Looking to create profound ideas, timeless design, with one goal in
+                    mind
+                    to make the internet a better place!
 
-    <section>
-        <div class="content-details">
-            <h1>
-                Value is beautiful
-            </h1>
-            <p>
-                We are a mid sized development agency focusing on data driven viable value in the digital space creating
-                engaging content and web applications to power the digital movement of a company.
-    
-                Our passion is to spend more time on fewer projects and focus on the intellectual, functional, and
-                artistic aspects of a business. Looking to create profound ideas, timeless design, with one goal in mind
-                to make the internet a better place!
-            </p>
-        </div>    
-        <div class="colgroup">
-            <div class="column1">
-                <div class="image">
-                    <img src="./assets/images/luca-bravo-XJXWbfSo2f0-unsplash (1).png" alt="laptop image">
-                </div>
-                <div class="image-text">
-                    Digital News .18
-                </div>
-                <h2>
-                    Digital News .18
-                </h2>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque libero, voluptatum nulla saepe
-                    dolorum omnis. Eligendi facilis labore, minima fugit, itaque quia sed aspernatur ex laboriosam eius
-                    tempore quas maiores.
                 </p>
             </div>
-            <div class="column2">
-                <div class="image-content">
+        </section>
+        <section class="row">
+            <div class="col">
+                <div class="article-block">
                     <div class="image">
                         <img src="./assets/images/luca-bravo-XJXWbfSo2f0-unsplash (1).png" alt="laptop image">
+                        <div class="image-text">
+                            <span id="top-right">Digital News .18</span>
+                        </div>
                     </div>
-                    <div class="image-text">
-                        Monthly Summary .27
+                    <div class="article-content">
+                        <h2>
+                            Digital News .18
+                        </h2>
+                        <p>
+
+                            Digitala Nyheter V.18 Digitala Nyheter V.18 är här och denna veckan får ni ta del av
+                            uppdateringar kring TikTok, Snapchats drönare, Metas VR-headsett och Instagrams utökning av
+                            Reels. Meta planerar att lansera fyra nya VR-headsettyper Majoriteten av exemplen som vi har
+                            sett på Zuck och Co.s föreställda metaverse hittills involverar helt uppslukade virtuell
+                            verklighet och […]
+                        </p>
+                        <button class="btn-readmore">Readmore</button>
                     </div>
                 </div>
-
-                <h2>
-                    Monthly Summary .27
-                </h2>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque libero, voluptatum nulla saepe
-                    dolorum omnis. Eligendi facilis labore, minima fugit, itaque quia sed aspernatur ex laboriosam eius
-                    tempore quas maiores.
-                </p>
             </div>
-        </div>
-    </section>
+            <div class="col">
+                <div class="article-block">
+                    <div class="image">
+                        <img src="./assets/images/sigmund-Fa9b57hffnM-unsplash.png" alt="monthly Summary image">
+                        <div class="image-text">
+                            <span id="bottom-left">Monthly Summary .27</span>
+                        </div>
+                    </div>
+                    <div class="article-content">
+                        <h2>
+                            Monthly Summary .27
+                        </h2>
+                        <p>
+
+                            Digitala Nyheter V.17 är här och vi får ta del av inget mindre än bland annat Elon Musks köp
+                            av Twitter och Reddits gemenskapsfond! LinkedIn lägger till nya profillänkar och
+                            kampanjalternativ för nyhetsbrev LinkedIn har lagt till ett nytt alternativ för att visa upp
+                            en länk i din profil, tillsammans med nya analysverktyg för gruppinlägg, en […]
+                            </p>
+                            <button class="btn-readmore">Readmore</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
