created span for button of readmore

--- a/Home/index.html
+++ b/Home/index.html
@@ -49,7 +49,7 @@
                             sett på Zuck och Co.s föreställda metaverse hittills involverar helt uppslukade virtuell
                             verklighet och […]
                         </p>
-                        <button class="btn-readmore">Readmore</button>
+                        <span class="btn-readmore">Readmore</span>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                             kampanjalternativ för nyhetsbrev LinkedIn har lagt till ett nytt alternativ för att visa upp
                             en länk i din profil, tillsammans med nya analysverktyg för gruppinlägg, en […]
                             </p>
-                            <button class="btn-readmore">Readmore</button>
+                            <span class="btn-readmore">Readmore</span>
                     </div>
 
                 </div>
