--- a/Home/index.html
+++ b/Home/index.html
@@ -71,15 +71,41 @@
                             av Twitter och Reddits gemenskapsfond! LinkedIn lägger till nya profillänkar och
                             kampanjalternativ för nyhetsbrev LinkedIn har lagt till ett nytt alternativ för att visa upp
                             en länk i din profil, tillsammans med nya analysverktyg för gruppinlägg, en […]
-                            </p>
-                            <span class="btn-readmore">Readmore</span>
+                        </p>
+                        <span class="btn-readmore">Readmore</span>
                     </div>
 
                 </div>
             </div>
         </section>
-    </main>
+    
 
+    <section class="third-page">
+        <div class="section-heading">
+            <h2>
+                From complex<br>
+                To simple
+            </h2>
+            <p>
+                Our creative process is studious and thoughtful. It’s a constant distillation of ideas with a goal to
+                say
+                the most with the least, and communicate something complex in a simple way. It includes research,
+                strategy,
+                creative conceptualization, design, motion graphics, and audio production.
+            </p>
+        </div>
+        <div class="section-footer">
+            <h3>Service Group</h3>
+            <ul>
+                <li>E-Commerce Solutions</li>
+                <li>Open Source Solutions</li>
+                <li>Development Service </li>
+                <li>Hosting Solutions</li>
+                <li>Design & Identity</li>
+            </ul>
+        </div>
+    </section>
+</main>
 </body>
 
 </html>
