image position change

--- a/project/index.html
+++ b/project/index.html
@@ -59,9 +59,10 @@
             </div>
         </section>
         <section class="hero-content">
+            <div class="hero-wrap">
             <p>
-                We are a data driven digital identity and web development studio who loves to work with clients &
-                customers who are looking to power their brand with digital viable results.
+                We are a data driven digital identity and web <br> development studio who loves to work with <br>  clients &
+                customers who are looking to <br> power their brand with digital viable results.
             </p>
             <div class="image-container">
                 <div class="row">
@@ -82,6 +83,7 @@
                 </span>
                 <img src="./assets/images/arrow.svg" alt="right arrow">
             </div>
+        </div>
 
         </section>
 
